bookle-core/tests/snapshots/conversion_tests__alice_azw3_metadata.snap
---
source: bookle-core/tests/conversion_tests.rs
expression: snapshot
---
{
  "title": "Alice's Adventures in Wonderland",
  "creator": [
    "Lewis Carroll"
  ],
  "subject": [],
  "description": null,
  "publisher": "D. Appleton and Co",
  "language": "en",
  "cover_resource_key": null,
  "reading_direction": "LeftToRight",
  "rights": null
}
