bookle-core/tests/snapshots/conversion_tests__around_the_world_epub_metadata.snap
---
source: bookle-core/tests/conversion_tests.rs
expression: snapshot
---
{
  "title": "Around the World in 28 Languages",
  "creator": [
    "Infogrid Pacific"
  ],
  "subject": [],
  "description": "Font rendering for multiple languages in a single ePub 3",
  "publisher": "Infogrid Pacific",
  "language": "en",
  "cover_resource_key": "cover",
  "reading_direction": "LeftToRight",
  "rights": null
}
