bookle-core/tests/snapshots/conversion_tests__famous_paintings_mobi_metadata.snap
---
source: bookle-core/tests/conversion_tests.rs
expression: snapshot
---
{
  "title": "Famous Paintings",
  "creator": [
    "Infogrid Pacific"
  ],
  "subject": [],
  "description": null,
  "publisher": "Infogrid Pacific",
  "language": "en",
  "cover_resource_key": null,
  "reading_direction": "LeftToRight",
  "rights": null
}
