bookle-core/tests/snapshots/conversion_tests__sample1_epub_metadata.snap
---
source: bookle-core/tests/conversion_tests.rs
expression: snapshot
---
{
  "title": "The Geography of Bliss: One Grump's Search for the Happiest Places in the World",
  "creator": [
    "Eric Weiner"
  ],
  "subject": [
    "TRV000000"
  ],
  "description": "Part foreign affairs discourse, part humor, and part twisted self-help guide, The Geography of Bliss takes the reader from America to Iceland to India in search of happiness, or, in the crabby author's case, moments of 'un-unhappiness.' The book uses a beguiling mixture of travel, psychology, science and humor to investigate not what happiness is, but where it is. Are people in Switzerland happier because it is the most democratic country in the world? Do citizens of Singapore benefit psychologically by having their options limited by the government? Is the King of Bhutan a visionary for his initiative to calculate Gross National Happiness? Why is Asheville, North Carolina so damn happy? With engaging wit and surprising insights, Eric Weiner answers those questions and many others, offering travelers of all moods some interesting new ideas for sunnier destinations and dispositions.",
  "publisher": "Twelve",
  "language": "en",
  "cover_resource_key": "cover",
  "reading_direction": "LeftToRight",
  "rights": "WORLD ALL LANGUAGES"
}
